src/styles/index.scss
@use 'src/styles/utility' as *;

/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */
/* You can override the default Infima variables here. */
/* Note: !important used to override node_modules css classes 
   in order to avoid swizzling the whole component just to modify few classes */

:root {
  --ifm-color-primary: #2e8555;
  --ifm-color-primary-dark: #29784c;
  --ifm-color-primary-darker: #277148;
  --ifm-color-primary-darkest: #205d3b;
  --ifm-color-primary-light: #33925d;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-lightest: #3cad6e;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
  --ifm-menu-color: #414652;
  --ifm-menu-link-sublist-icon-2: url(/img/arrow_sidebar.svg);
  --ifm-menu-link-padding-vertical: 9px;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: #25c2a0;
  --ifm-color-primary-dark: #21af90;
  --ifm-color-primary-darker: #1fa588;
  --ifm-color-primary-darkest: #1a8870;
  --ifm-color-primary-light: #29d5b0;
  --ifm-color-primary-lighter: #32d8b4;
  --ifm-color-primary-lightest: #4fddbf;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

* {
  margin: 0;
  padding: 0;
  scroll-margin-top: rem(10);
}

.main-page-row:nth-child(even) {
  background-color: var(--ifm-color-emphasis-100);
}

.error-message {
  color: var(--colors-coral600) !important;
}

a {
  color: var(--colors-coral600);
  &:hover {
    color: var(--colors-coral600);
  }
}
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  padding: 0;
}

.loading {
  position: absolute;
  width: 100%;
  height: fit-content;
  background-color: rgba(0, 0, 0, 0.3);
  display: flex;
  justify-content: center;
  align-items: center;
}

.navbar__link:hover,
.navbar__link--active {
  color: var(--colors-coral600);
  text-decoration: none;
}

.navbar {
  padding: rem(1.3) 0 rem(2.3) rem(3.9);
}

.navbar__brand {
  margin-right: rem(5);
}

.menu__list {
  margin-top: rem(5);
}

.menu__link {
  font-size: rem(1.4);
  font-weight: var(--ifm-font-weight-normal);
}

.menu__caret:before {
  background: var(--ifm-menu-link-sublist-icon-2);
  filter: var(--ifm-menu-link-sublist-icon-filter);
  height: rem(1.2);
  transform: rotateZ(90deg);
  width: rem(0.872);
}

.menu__list-item--collapsed .menu__link--sublist:after,
.menu__list-item--collapsed .menu__caret:before {
  transform: rotateZ(0deg);
}

.menu__link--active,
.menu__link--active:hover {
  color: var(--colors-coral600);
}

.menu__caret {
  margin-right: rem(3.3);
}

aside.theme-doc-sidebar-container {
  height: 100vh;
  width: rem(28.3);
}

[class*='tocCollapsibleButton'] {
  box-sizing: border-box;
}

[class*='tocCollapsibleButton']::after {
  background: var(--ifm-menu-link-sublist-icon-2) !important;
  height: rem(1.2) !important;
  width: rem(0.872) !important;
  transform: rotate(90deg) !important;
}

[class*='tocCollapsibleButtonExpanded']::after {
  transform: rotate(270deg) !important;
}

